# minesweeper

./: .gitignore  Cargo.toml  build.bat
src/: browser_util.rs  lib.rs
src/mines/: mine.rs  minefield.rs  minesfield.rs  mod.rs  position.rs  positition.rs
src/ui/: app.rs  button.rs  field.rs  main_menu.rs  menu.rs  minefield.rs  mod.rs  playground.rs
src/ui/main_menu/: main.rs  mod.rs
src/ui/main_menu/new_game/: mod.rs  new_game_menu.rs
src/ui/main_menu/settings/: color_schema.rs  mod.rs  selectable_color_schema.rs  settings_menu.rs
src/ui/playground/: field.rs  menu.rs  minefield.rs  mod.rs  playground.rs
www/: index.html  script.js  style.css
