[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }
wasm-bindgen = "0.2.83"
yew = "0.20.0"
web-sys = "0.3.60"
yew-stdweb = "0.18.0"
js-sys = "0.3.60"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]

[lib]
crate-type =["cdylib"]